delete method done. try with resources error done to avoid file closing problems.
