# src/main/openapi/student-openapi.yml
@@ -468,7 +468,7 @@ paths:
           multipart/form-data:
             schema:
               type: object
-              properties:            
+              properties:
                 fileName:
                   type: string
                 content:
@@ -476,6 +476,14 @@ paths:
                   format: binary
             examples: {}
         description: ''
+    delete:
+      summary: ''
+      tags:
+        - student-controller
+      operationId: deleteImageForStudent
+      responses:
+        '200':
+          description: OK
   '/api/images/{id}':
     parameters:
       - schema:
